--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@
                     </form>
                 </div>
                 <div class="flex">
-                    <a href="dataset+report" f>
+                    <a href="dataset+report" target="_blank">
                         <button
                             class="bg-gray-100 inline-flex py-3 px-5 rounded-lg items-center hover:bg-gray-200 focus:outline-none">
 
