--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,8 @@
             </a>
             <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
             </nav>
-            <a href="https://nbviewer.org/github/suryanshyaknow/mini-projects/blob/main/6__ML/in2.1__Task%20%28multi%20linear%20regression%29/in2.1__Task%20%28multi%20linear%20regression%29.ipynb"
-                class="github" target="_blank" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24">
+            <a href="https://github.com/suryanshyaknow/predictive-maintenance-regression" class="github" target="_blank"
+                rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path fill="currentColor"
                         d="M12 .5C5.37.5 0 5.78 0 12.292c0 5.211 3.438 9.63 8.205 11.188.6.111.82-.254.82-.567 0-.28-.01-1.022-.015-2.005-3.338.711-4.042-1.582-4.042-1.582-.546-1.361-1.335-1.725-1.335-1.725-1.087-.731.084-.716.084-.716 1.205.082 1.838 1.215 1.838 1.215 1.07 1.803 2.809 1.282 3.495.981.108-.763.417-1.282.76-1.577-2.665-.295-5.466-1.309-5.466-5.827 0-1.287.465-2.339 1.235-3.164-.135-.298-.54-1.497.105-3.121 0 0 1.005-.316 3.3 1.209.96-.262 1.98-.392 3-.398 1.02.006 2.04.136 3 .398 2.28-1.525 3.285-1.209 3.285-1.209.645 1.624.24 2.823.12 3.121.765.825 1.23 1.877 1.23 3.164 0 4.53-2.805 5.527-5.475 5.817.42.354.81 1.077.81 2.182 0 1.578-.015 2.846-.015 3.229 0 .309.21.678.825.56C20.565 21.917 24 17.495 24 12.292 24 5.78 18.627.5 12 .5z">
                     </path>
@@ -142,7 +141,7 @@
                     </form>
                 </div>
                 <div class="flex">
-                    <a href="dataset+report" target="_blank">
+                    <a href="dataset+analytics" target="_blank">
                         <button
                             class="bg-gray-100 inline-flex py-3 px-5 rounded-lg items-center hover:bg-gray-200 focus:outline-none">
 
